--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CSS practice page</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+     <link rel="stylesheet" href="style.css"> 
   </head>
   <body>
     <h3>
@@ -18,7 +18,7 @@
     <h3>
       Style an image
     </h3>
-      <!-- <img src="http://www.fillmurray.com/200/200" alt=""> -->
+    <img src="https://imabeautygeek.com/.image/t_share/MTM4MTU2ODQxNDE3ODQ0MTU0/essie-gel-couture-review-swatches_essie-sit-me-in-the-front-row-2016jpg.jpg">
     <h3>
       Style some divs
     </h3>
